--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,96 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <!-- Add Code Here -->
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Web Page</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <h1>My Resume</h1>
+    <div class="links">
+      <a href="#about">About Me</a> | <a href="#portfolio">Portfolio | </a
+      ><a href="#education">Education</a> |
+      <a href="#professionalExperience">Professional Experience</a> |
+      <a href="#areaOfInterest">Area of Interest</a>
+    </div>
+    <div id="about" class="about">
+      <img class="photo" src="images/photo.png" />
+      <h2>About Me</h2>
+      <img class="location" src="images/location.png" />
+      <img class="country" src="images/singaporeflag.jpg" />
+
+      <p>
+        Hello. I am a cloud infrastructure engineer and an Computer Vision
+        hobbyist. Expanding my skill set to the realm of Software Development.
+      </p>
+      <p>
+        For any collaboration, reach out to me at my email
+        <a href="mailto:khai.ikhwan@gmail.com">here.</a>
+      </p>
+    </div>
+    <div id="portfolio" class="portfolio">
+      <h2>Portfolio</h2>
+      <p>
+        My works are accessible via
+        <a href="https://github.com/mkikhwan" target="_blank">GitHub</a>
+        .
+      </p>
+    </div>
+    <div id="education" class="education">
+      <h2>Education</h2>
+      <h4>Tertiary (Polytechnic)</h4>
+      <ul>
+        <li>Diploma in Information Technology</li>
+      </ul>
+    </div>
+    <div id="professionalExperience" class="professionalExperience">
+      <h2>Professional Experience</h2>
+      <h4>2017-2017</h4>
+      <ul>
+        <li>SAP Developer</li>
+      </ul>
+      <h4>2018-2019</h4>
+
+      <ul>
+        <li>Developer (Automation)</li>
+      </ul>
+      <h4>2019-2019</h4>
+      <ul>
+        <li>Systems Engineer (Linux)</li>
+      </ul>
+
+      <h4>2020-2021</h4>
+      <ul>
+        <li>Desktop Engineer (Windows)</li>
+      </ul>
+
+      <h4>2021-2023</h4>
+      <ul>
+        <li>Cloud Engineer (Operations)</li>
+      </ul>
+    </div>
+    <div id="areaOfInterest" class="areaOfInterest">
+      <h2>Area of Interest</h2>
+      <h4>Machine Learning</h4>
+      <ul>
+        <li>Computer Vision</li>
+      </ul>
+      <h4>Quantum Computing</h4>
+      <ul>
+        <li>Quantum Cryptology</li>
+      </ul>
+      <h4>Cloud Infrastructure</h4>
+      <ul>
+        <li>Enterprise Architecure in Azure</li>
+      </ul>
+    </div>
+    <a href="#">Top</a>
+    <div class="footer">
+      &copy Khairul 2023 -
+      <script>
+        document.write(new Date().getFullYear());
+      </script>
+    </div>
+  </body>
 </html>
