--- a/assignment/index.html
+++ b/assignment/index.html
@@ -15,10 +15,10 @@
       <a href="#areaOfInterest">Area of Interest</a>
     </div>
     <div id="about" class="about">
-      <img class="photo" src="images/photo.png" />
+      <img class="photo" src="photo.png" />
       <h2>About Me</h2>
-      <img class="location" src="images/location.png" />
-      <img class="country" src="images/singaporeflag.jpg" />
+      <img class="location" src="location.png" />
+      <img class="country" src="singaporeflag.jpg" />
 
       <p>
         Hello. I am a cloud infrastructure engineer and an Computer Vision
